[FIX] web_editor: toolbar horizontal scroll and wrong radius
The font-awesome icons taking the `.btn` font-size was making them
14px while the other icons in the web_editor are 12px (eg. the svg ones)

It creates an overflow on the #toolbar creating on some screensize an
horizontal overflow. This commit applies a font size of 12px on the .fa
inside the `#toolbar`.

Additionally the createlink was not receiving the border radius rule due
to the `#unlink` element being present in the DOM but invisible on
screen after the create-link el. Swapping their order in the xml
and using the class `order-1` solve the issue without impacting the
backend editor.

task-3503975

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -524,6 +524,10 @@
                 display: none; // remove ballon
             }
 
+            .fa {
+                font-size: $o-we-sidebar-font-size;
+            }
+
             .btn {
                 @extend %we-generic-button;
                 display: flex;
